# sdcXHandsOn

./: .gitignore  CMakeLists.txt
libs/: CMakeLists.txt
libs/ORTableConsumer/: CMakeLists.txt  main.cpp
libs/ORTableProvider/: CMakeLists.txt  main.cpp
resources/: ORTableMDIB.xml  README.txt
resources/certificates/: ca.pem  cert.pem  pat_private.pem  private.pem
tools/cmake/Modules/: checkRequiredCompilerCXX14.cmake  copy_resources.cmake  copy_shared_dependencies.cmake  reset_RPATH.cmake
